--- a/index.html
+++ b/index.html
@@ -8,13 +8,68 @@
   </head>
   <body>
     <header>
-      <nav></nav>
-      <section class="bg-[url()]"></section>
+
+
+
+<!-- filler nav bar -->
+<nav class="bg-white border-gray-200 dark:bg-gray-900">
+  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+    <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
+        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+    </a>
+    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
+        </svg>
+    </button>
+    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
+      <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-b-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+        <li>
+          <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a>
+        </li>
+        <li>
+          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+      <section class="bg-[url(images/space.jpg)] bg-no-repeat bg-cover text-white text-center p-20">
+        <h1 class="text-4xl font-extrabold md:text-5xl lg:text-6xl p-3">Space project</h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab dolorem exercitationem cumque, repellendus expedita maxime saepe magnam animi laboriosam placeat minima maiores amet excepturi provident, esse necessitatibus quis corporis ullam!
+        
+        </p>
+      </section>
     </header>
-    <main>
-      <section></section>
-      <section></section>
-      <section></section>
+    <main class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 px-5 pt-5">
+      <section class="border w-fit h-fit rounded-b-lg"> 
+        <img src="images/neptune.jpg" alt="neptune" class="overflow-hidden w-full h-full object-cover p-1">
+        <p class="p-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum laboriosam dignissimos veritatis vel optio doloremque magnam voluptas eos praesentium in, numquam, illo ea. Beatae voluptatem commodi accusantium saepe harum!</p>
+    </section>
+    <section class="border w-fit h-fit rounded-b-lg"> 
+        <img src="images/saturn.jpg" alt="saturn" class="overflow-hidden w-full h-full object-cover p-1">
+        <p class="p-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum laboriosam dignissimos veritatis vel optio doloremque magnam voluptas eos praesentium in, numquam, illo ea. Beatae voluptatem commodi accusantium saepe harum!</p>
+    </section>
+    <section class="border w-fit h-fit rounded-b-lg"> 
+        <img src="images/uranus.jpg" alt="uranus" class="overflow-hidden w-full h-full object-cover p-1">
+        <p class="p-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum laboriosam dignissimos veritatis vel optio doloremque magnam voluptas eos praesentium in, numquam, illo ea. Beatae voluptatem commodi accusantium saepe harum!</p>
+    </section>
+    <section class="border w-fit h-fit rounded-b-lg"> 
+        <img src="images/jupiter.jpg" alt="jupiter" class="overflow-hidden w-full h-full object-cover p-1">
+        <p class="p-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum laboriosam dignissimos veritatis vel optio doloremque magnam voluptas eos praesentium in, numquam, illo ea. Beatae voluptatem commodi accusantium saepe harum!</p>
+    </section>
+   
     </main>
     <footer></footer>
   </body>
