--- a/index.html
+++ b/index.html
@@ -4,73 +4,126 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <title>Document</title>
+    <title>Gas Giants</title>
   </head>
   <body>
     <header>
+      <!-- filler nav bar -->
 
-
-
-<!-- filler nav bar -->
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
+      <!-- <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-    <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo" />
-        <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
-    </a>
-    <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
+  <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
+      <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" alt="Flowbite Logo">
+      <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+  </a>
+  <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+      <button type="button" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-4 py-2 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Get started</button>
+      <button data-collapse-toggle="navbar-sticky" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-sticky" aria-expanded="false">
         <span class="sr-only">Open main menu</span>
         <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
             <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 1h15M1 7h15M1 13h15"/>
         </svg>
     </button>
-    <div class="hidden w-full md:block md:w-auto" id="navbar-default">
-      <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-b-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
-        <li>
-          <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-blue-500" aria-current="page">Home</a>
-        </li>
-        <li>
-          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">About</a>
-        </li>
-        <li>
-          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Services</a>
-        </li>
-        <li>
-          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Pricing</a>
-        </li>
-        <li>
-          <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-blue-500 dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Contact</a>
-        </li>
-      </ul>
-    </div>
   </div>
-</nav>
-      <section class="bg-[url(images/space.jpg)] bg-no-repeat bg-cover text-white text-center p-20">
-        <h1 class="text-4xl font-extrabold md:text-5xl lg:text-6xl p-3">Space project</h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab dolorem exercitationem cumque, repellendus expedita maxime saepe magnam animi laboriosam placeat minima maiores amet excepturi provident, esse necessitatibus quis corporis ullam!
-        
+  <div class="items-center justify-between hidden w-full md:flex md:w-auto md:order-1" id="navbar-sticky">
+    <ul class="flex flex-col p-4 md:p-0 mt-4 font-medium border border-gray-100 rounded-lg bg-gray-50 md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-gray-900 dark:border-gray-700">
+      <li>
+        <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded-sm md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
+      </li>
+      <li>
+        <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+      </li>
+      <li>
+        <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
+      </li>
+      <li>
+        <a href="#" class="block py-2 px-3 text-gray-900 rounded-sm hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
+      </li>
+    </ul>
+  </div>
+  </div>
+</nav> -->
+
+      <nav>
+        <div>
+        <ul class="flex flex-wrap justify-around">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+        </div>
+      </nav>
+      <section
+        id="home"
+        class="bg-[url(images/space.jpg)] bg-no-repeat bg-cover text-white text-center p-20"
+      >
+        <h1 class="text-4xl font-extrabold md:text-5xl lg:text-6xl p-3">
+          Gas Giants
+        </h1>
+        <p id="about">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab dolorem
+          exercitationem cumque, repellendus expedita maxime saepe magnam animi
+          laboriosam placeat minima maiores amet excepturi provident, esse
+          necessitatibus quis corporis ullam!
         </p>
       </section>
     </header>
-    <main class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 px-5 pt-5">
-      <section class="border w-fit h-fit rounded-b-lg"> 
-        <img src="images/neptune.jpg" alt="neptune" class="overflow-hidden w-full h-full object-cover p-1">
-        <p class="p-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum laboriosam dignissimos veritatis vel optio doloremque magnam voluptas eos praesentium in, numquam, illo ea. Beatae voluptatem commodi accusantium saepe harum!</p>
-    </section>
-    <section class="border w-fit h-fit rounded-b-lg"> 
-        <img src="images/saturn.jpg" alt="saturn" class="overflow-hidden w-full h-full object-cover p-1">
-        <p class="p-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum laboriosam dignissimos veritatis vel optio doloremque magnam voluptas eos praesentium in, numquam, illo ea. Beatae voluptatem commodi accusantium saepe harum!</p>
-    </section>
-    <section class="border w-fit h-fit rounded-b-lg"> 
-        <img src="images/uranus.jpg" alt="uranus" class="overflow-hidden w-full h-full object-cover p-1">
-        <p class="p-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum laboriosam dignissimos veritatis vel optio doloremque magnam voluptas eos praesentium in, numquam, illo ea. Beatae voluptatem commodi accusantium saepe harum!</p>
-    </section>
-    <section class="border w-fit h-fit rounded-b-lg"> 
-        <img src="images/jupiter.jpg" alt="jupiter" class="overflow-hidden w-full h-full object-cover p-1">
-        <p class="p-1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum laboriosam dignissimos veritatis vel optio doloremque magnam voluptas eos praesentium in, numquam, illo ea. Beatae voluptatem commodi accusantium saepe harum!</p>
-    </section>
-   
+    <main
+      class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 px-5 pt-5"
+    >
+      <section class="border w-fit h-fit rounded-b-lg">
+        <img
+          src="images/neptune.jpg"
+          alt="neptune"
+          class="overflow-hidden w-full h-full object-cover p-1"
+        />
+        <p class="p-1">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum
+          laboriosam dignissimos veritatis vel optio doloremque magnam voluptas
+          eos praesentium in, numquam, illo ea. Beatae voluptatem commodi
+          accusantium saepe harum!
+        </p>
+      </section>
+      <section class="border w-fit h-fit rounded-b-lg">
+        <img
+          src="images/saturn.jpg"
+          alt="saturn"
+          class="overflow-hidden w-full h-full object-cover p-1"
+        />
+        <p class="p-1">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum
+          laboriosam dignissimos veritatis vel optio doloremque magnam voluptas
+          eos praesentium in, numquam, illo ea. Beatae voluptatem commodi
+          accusantium saepe harum!
+        </p>
+      </section>
+      <section class="border w-fit h-fit rounded-b-lg">
+        <img
+          src="images/uranus.jpg"
+          alt="uranus"
+          class="overflow-hidden w-full h-full object-cover p-1"
+        />
+        <p class="p-1">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum
+          laboriosam dignissimos veritatis vel optio doloremque magnam voluptas
+          eos praesentium in, numquam, illo ea. Beatae voluptatem commodi
+          accusantium saepe harum!
+        </p>
+      </section>
+      <section class="border w-fit h-fit rounded-b-lg">
+        <img
+          src="images/jupiter.jpg"
+          alt="jupiter"
+          class="overflow-hidden w-full h-full object-cover p-1"
+        />
+        <p class="p-1">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum
+          laboriosam dignissimos veritatis vel optio doloremque magnam voluptas
+          eos praesentium in, numquam, illo ea. Beatae voluptatem commodi
+          accusantium saepe harum!
+        </p>
+      </section>
     </main>
-    <footer></footer>
+    <footer id="contact"></footer>
   </body>
 </html>
