replaced filler text

--- a/index.html
+++ b/index.html
@@ -7,84 +7,121 @@
     <title>Gas Giants</title>
   </head>
   <body>
-    <header id="home"
-        class="bg-[url(images/space.jpg)] bg-no-repeat bg-cover text-white">
-    
+    <header
+      id="home"
+      class="bg-[url(images/space.jpg)] bg-no-repeat bg-cover text-white"
+    >
       <nav class="py-5 text-[18px]">
         <div>
-        <ul class="flex flex-wrap justify-around">
-          <li class="hover:underline"><a href="#home">Home</a></li>
-          <li class="hover:underline"><a href="#about">About</a></li>
-          <li class="hover:underline"><a href="#contact">Contact</a></li>
-        </ul>
+          <ul class="flex flex-wrap justify-around">
+            <li class="hover:underline"><a href="#home">Home</a></li>
+            <li class="hover:underline"><a href="#about">About</a></li>
+            <li class="hover:underline"><a href="#contact">Contact</a></li>
+          </ul>
         </div>
       </nav>
-      <section class="text-center px-20 pb-20"
-      >
+      <section class="text-center px-20 pb-20">
         <h1 class="text-4xl font-extrabold md:text-5xl lg:text-6xl p-3">
           Gas Giants
         </h1>
         <p id="about">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab dolorem
-          exercitationem cumque, repellendus expedita maxime saepe magnam animi
-          laboriosam placeat minima maiores amet excepturi provident, esse
-          necessitatibus quis corporis ullam!
+          A
+          <a
+            href="https://science.nasa.gov/exoplanets/gas-giant/"
+            class="hover:underline"
+            >gas giant</a
+          >
+          is a large planet mostly composed of helium and/or hydrogen. These
+          planets don’t have hard surfaces and instead have swirling gases above
+          a solid core.
         </p>
       </section>
     </header>
     <main
       class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6 px-5 pt-5"
     >
-      <section class="border w-fit h-fit rounded-b-lg">
+      <section class=" w-fit h-fit rounded-b-lg">
+        <h2 class="text-center text-2xl hover:underline">
+          <a href="https://science.nasa.gov/neptune/neptune-facts/">Neptune</a>
+        </h2>
         <img
           src="images/neptune.jpg"
           alt="neptune"
-          class="overflow-hidden w-full h-full object-cover p-1"
+          class="w-full h-full object-cover p-1"
         />
         <p class="p-1">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum
-          laboriosam dignissimos veritatis vel optio doloremque magnam voluptas
-          eos praesentium in, numquam, illo ea. Beatae voluptatem commodi
-          accusantium saepe harum!
+          Neptune is the eighth, and most distant planet from the Sun. It’s the
+          fourth-largest, and the first planet discovered with math. The ice
+          giant Neptune is more than 30 times as far from the Sun as Earth.
+          Neptune is the only planet in our solar system not visible to the
+          naked eye. Its atmosphere (made up mostly of hydrogen, helium, and
+          methane) extends to great depths, gradually merging into water and
+          other melted ices over a heavier, solid core with about the same mass
+          as Earth. Neptune has 16 known moons.
         </p>
       </section>
-      <section class="border w-fit h-fit rounded-b-lg">
+      <section class="w-fit h-fit rounded-b-lg">
+        <h2 class="text-center text-2xl hover:underline">
+          <a href="https://science.nasa.gov/saturn/facts/">Saturn</a>
+        </h2>
         <img
           src="images/saturn.jpg"
           alt="saturn"
-          class="overflow-hidden w-full h-full object-cover p-1"
+          class="w-full h-full object-cover p-1"
         />
         <p class="p-1">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum
-          laboriosam dignissimos veritatis vel optio doloremque magnam voluptas
-          eos praesentium in, numquam, illo ea. Beatae voluptatem commodi
-          accusantium saepe harum!
+          Saturn is the sixth planet from the Sun and the second largest planet
+          in our solar system. Saturn is a massive ball made mostly of hydrogen
+          and helium. Saturn is not the only planet to have rings, but none are
+          as spectacular or as complex as Saturn's. Saturn also has dozens of
+          moons. From the jets of water that spray from Saturn's moon
+          Enceladus to the methane lakes on smoggy Titan, the Saturn system is a
+          rich source of scientific discovery and still holds many mysteries.
         </p>
       </section>
-      <section class="border w-fit h-fit rounded-b-lg">
+      <section class=" w-fit h-fit rounded-b-lg">
+        <h2 class="text-center text-2xl hover:underline">
+          <a href="https://science.nasa.gov/uranus/facts/">Uranus</a>
+        </h2>
         <img
           src="images/uranus.jpg"
           alt="uranus"
-          class="overflow-hidden w-full h-full object-cover p-1"
+          class="w-full h-full object-cover p-1"
         />
         <p class="p-1">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum
-          laboriosam dignissimos veritatis vel optio doloremque magnam voluptas
-          eos praesentium in, numquam, illo ea. Beatae voluptatem commodi
-          accusantium saepe harum!
+          Uranus is the seventh planet from the Sun, and the third largest
+          planet in our solar system. Uranus is very cold and windy. It is
+          surrounded by faint rings, and more than two dozen small moons. It
+          rotates at a nearly 90-degree angle from the plane of its orbit. This
+          unique tilt makes Uranus appear to spin on its side. Uranus was the
+          first planet found with the aid of a telescope. Uranus' atmosphere is
+          mostly hydrogen and helium, with a small amount of methane and traces
+          of water and ammonia. The methane gives Uranus its signature blue
+          color.
         </p>
       </section>
-      <section class="border w-fit h-fit rounded-b-lg">
+      <section class=" w-fit h-fit rounded-b-lg">
+        <h2 class="text-center text-2xl hover:underline">
+          <a href="https://science.nasa.gov/jupiter/jupiter-facts/">Jupiter</a>
+        </h2>
         <img
           src="images/jupiter.jpg"
           alt="jupiter"
-          class="overflow-hidden w-full h-full object-cover p-1"
+          class="w-full h-full object-cover p-1"
         />
         <p class="p-1">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At earum
-          laboriosam dignissimos veritatis vel optio doloremque magnam voluptas
-          eos praesentium in, numquam, illo ea. Beatae voluptatem commodi
-          accusantium saepe harum!
+          Jupiter is the largest and oldest planet in our solar system. If
+          Jupiter was a hollow shell, 1,000 Earths could fit inside. Jupiter has
+          the shortest day in the solar system, taking about 9.9 hours to spin
+          around once on its axis. Jupiter's signature stripes and swirls are
+          actually cold, windy clouds of ammonia and water, floating in an
+          atmosphere of hydrogen and helium. The top cloud is probably made of
+          ammonia ice, while the middle layer is likely made of ammonium
+          hydrosulfide crystals. The innermost layer may be made of water ice
+          and vapor. Jupiter’s iconic Great Red Spot is a giant storm bigger
+          than Earth that has raged for hundreds of years. With four large moons
+          and many smaller moons, Jupiter forms a kind of miniature solar
+          system.
         </p>
       </section>
     </main>
