added icon in header and changed some styling

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
       id="home"
       class="bg-[url(images/space.jpg)] bg-no-repeat bg-cover text-white"
     >
-      <nav class="py-5 text-[18px]">
+      <nav class="py-5 text-[18px] bg-white/15">
         <div>
-          <ul class="flex flex-wrap justify-around">
+          <img src="images/spaceship.svg" alt="spaceship icon" class=" w-10 absolute top-0 left-0 m-2 pt-2">
+          <ul class="flex flex-wrap justify-end gap-6 mx-3">
+            
             <li class="hover:underline"><a href="#home">Home</a></li>
             <li class="hover:underline"><a href="#about">About</a></li>
             <li class="hover:underline">
@@ -22,7 +24,7 @@
           </ul>
         </div>
       </nav>
-      <section class="text-center px-20 pb-15">
+      <section class="text-center px-20 pb-15 mt-5">
         <h1 class="text-4xl font-extrabold md:text-5xl lg:text-6xl p-3">
           Gas Giants
         </h1>
@@ -126,7 +128,7 @@
     </main>
     <footer id="additional">
       <ul
-        class="flex flex-wrap justify-start gap-3 mt-5 p-5 bg-black text-white"
+        class="flex flex-wrap justify-end gap-3 mt-5 p-5 bg-black/60 text-white"
       >
         <li class="hover:underline">
           <a
